--- a/index.html
+++ b/index.html
@@ -178,12 +178,14 @@
 
     <section id="calendar">
       <h2>Meetings & Events</h2>
+      <!-- Replace with your actual Google Calendar embed link -->
       <iframe src="https://calendar.google.com/calendar/embed?src=yourcalendarid&ctz=America/New_York"></iframe>
     </section>
 
     <section id="join">
       <h2>Join Us</h2>
       <p>Membership is open to any currently enrolled MSU student who supports our mission. Joining SHA also subscribes you to our newsletter.</p>
+      <!-- Replace action with Google Form or Formspree link -->
       <form action="https://formspree.io/f/your-form-id" method="POST">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
