--- a/index.html
+++ b/index.html
@@ -1,259 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spartan Housing Alliance</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     :root {
       --msu-green: #18453b;
       --msu-white: #ffffff;
-      --msu-light: #f5f5f5;
-      --accent: #117a65;
     }
-
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-
-    body {
-      font-family: "Helvetica Neue", Arial, sans-serif;
-      background-color: var(--msu-light);
-      color: #222;
-      line-height: 1.6;
+    .navbar {
+      background-color: var(--msu-green) !important;
     }
-
-    /* ---------- NAVBAR ---------- */
-    header {
-      background: var(--msu-green);
-      color: var(--msu-white);
-      padding: 0.8rem 1.5rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    header h1 {
-      font-size: 1.2rem;
-    }
-
-    nav {
-      display: flex;
-      gap: 1.2rem;
-    }
-
-    nav a {
-      color: var(--msu-white);
-      text-decoration: none;
+    .navbar-brand, .nav-link {
+      color: var(--msu-white) !important;
       font-weight: bold;
     }
-
-    /* Hamburger button */
-    .menu-btn {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-
-    .menu-btn span {
-      height: 3px;
-      width: 25px;
-      background: var(--msu-white);
-      margin: 4px 0;
-      border-radius: 2px;
-      transition: 0.3s;
-    }
-
-    .mobile-nav {
-      display: none;
-      flex-direction: column;
-      background: var(--msu-green);
-    }
-
-    .mobile-nav a {
-      padding: 0.8rem;
-      border-top: 1px solid rgba(255,255,255,0.2);
-    }
-
-    /* ---------- HERO ---------- */
     .hero {
       background: var(--msu-green);
       color: var(--msu-white);
+      padding: 6rem 1rem;
       text-align: center;
-      padding: 4rem 2rem;
     }
-    .hero h2 { font-size: 2.5rem; margin-bottom: 1rem; }
-    .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
-    .hero a {
-      background: var(--accent);
-      color: var(--msu-white);
-      padding: 0.8rem 1.5rem;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
     }
-    .hero a:hover { background: #0e6655; }
-
-    /* ---------- SECTIONS ---------- */
-    main { max-width: 1000px; margin: 2rem auto; padding: 0 1rem; }
-
-    section {
+    .hero p {
+      font-size: 1.25rem;
       margin-bottom: 2rem;
-      padding: 2rem;
-      background: var(--msu-white);
-      border-radius: 10px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.08);
     }
-
-    h2 { color: var(--msu-green); margin-bottom: 1rem; }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1rem;
-    }
-
-    .grid div {
-      background: var(--msu-light);
-      padding: 1rem;
-      border-radius: 8px;
-      text-align: center;
-    }
-
-    iframe {
-      width: 100%;
-      height: 500px;
-      border: none;
-      border-radius: 8px;
-    }
-
-    form input, form button {
-      width: 100%;
-      padding: 0.7rem;
-      margin: 0.5rem 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-    form button {
-      background: var(--msu-green);
-      color: var(--msu-white);
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
     footer {
-      text-align: center;
-      padding: 1rem;
       background: var(--msu-green);
       color: var(--msu-white);
+      text-align: center;
+      padding: 1rem;
       margin-top: 2rem;
     }
-
-    /* ---------- RESPONSIVE ---------- */
-    @media (max-width: 768px) {
-      nav { display: none; }
-      .menu-btn { display: flex; }
-      .mobile-nav.show { display: flex; }
+    .card {
+      border: none;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-  <!-- NAV -->
-  <header>
-    <h1>SHA</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#mission">Mission</a>
-      <a href="#exec">Exec</a>
-      <a href="#calendar">Calendar</a>
-      <a href="#join">Join</a>
-      <a href="#announcements">Announcements</a>
-      <a href="#newsletters">Newsletters</a>
-    </nav>
-    <div class="menu-btn" onclick="document.querySelector('.mobile-nav').classList.toggle('show')">
-      <span></span><span></span><span></span>
+
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">SHA</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#mission">Mission</a></li>
+          <li class="nav-item"><a class="nav-link" href="#exec">Exec Board</a></li>
+          <li class="nav-item"><a class="nav-link" href="#calendar">Calendar</a></li>
+          <li class="nav-item"><a class="nav-link" href="#join">Join</a></li>
+          <li class="nav-item"><a class="nav-link" href="#announcements">Announcements</a></li>
+          <li class="nav-item"><a class="nav-link" href="#newsletters">Newsletters</a></li>
+        </ul>
+      </div>
     </div>
-  </header>
-  <div class="mobile-nav">
-    <a href="#about">About</a>
-    <a href="#mission">Mission</a>
-    <a href="#exec">Exec</a>
-    <a href="#calendar">Calendar</a>
-    <a href="#join">Join</a>
-    <a href="#announcements">Announcements</a>
-    <a href="#newsletters">Newsletters</a>
-  </div>
+  </nav>
 
   <!-- HERO -->
   <section class="hero">
-    <h2>Spartan Housing Alliance</h2>
-    <p>Advocating for affordable, safe, and accessible housing at MSU.</p>
-    <a href="#join">Join Us Today</a>
+    <div class="container">
+      <h1>Spartan Housing Alliance</h1>
+      <p>Advocating for affordable, safe, and accessible housing at MSU.</p>
+      <a href="#join" class="btn btn-light btn-lg">Join Us Today</a>
+    </div>
   </section>
 
   <!-- CONTENT -->
-  <main>
-    <section id="about">
-      <h2>Preamble</h2>
+  <main class="container my-5">
+
+    <section id="about" class="mb-5">
+      <h2 class="text-success">Preamble</h2>
       <p>
         We, the students of Michigan State University, recognizing the critical importance of affordable, safe, and accessible housing for the well-being and success of the student body, do hereby establish this Constitution for the Spartan Housing Alliance in pursuit of advocacy, education, and community empowerment in housing justice.
       </p>
     </section>
 
-    <section id="mission">
-      <h2>Mission & Purpose</h2>
+    <section id="mission" class="mb-5">
+      <h2 class="text-success">Mission & Purpose</h2>
       <ul>
-        <li>Advocate for affordable, safe, and accessible housing options for all MSU students.</li>
+        <li>Advocate for policies and initiatives that promote affordable, safe, and accessible housing options for all MSU students.</li>
         <li>Educate students and the broader community on critical housing issues.</li>
         <li>Empower students to engage in housing-related advocacy efforts.</li>
         <li>Collaborate with administration, government, and community partners.</li>
       </ul>
     </section>
 
-    <section id="exec">
-      <h2>Executive Board</h2>
-      <div class="grid">
-        <div><h3>Lila Abdullah</h3><p>President & Founder</p></div>
-        <div><h3>[Name]</h3><p>Vice President</p></div>
-        <div><h3>[Name]</h3><p>Treasurer</p></div>
-        <div><h3>[Name]</h3><p>Secretary</p></div>
+    <section id="exec" class="mb-5">
+      <h2 class="text-success">Executive Board</h2>
+      <div class="row g-4">
+        <div class="col-md-3">
+          <div class="card p-3 text-center">
+            <h5>Lila Abdullah</h5>
+            <p>President & Founder</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card p-3 text-center">
+            <h5>[Name]</h5>
+            <p>Vice President</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card p-3 text-center">
+            <h5>[Name]</h5>
+            <p>Treasurer</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card p-3 text-center">
+            <h5>[Name]</h5>
+            <p>Secretary</p>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section id="calendar">
-      <h2>Meetings & Events</h2>
-      <iframe src="https://calendar.google.com/calendar/embed?src=yourcalendarid&ctz=America/New_York"></iframe>
+    <section id="calendar" class="mb-5">
+      <h2 class="text-success">Meetings & Events</h2>
+      <div class="ratio ratio-16x9">
+        <iframe src="https://calendar.google.com/calendar/embed?src=yourcalendarid&ctz=America/New_York"></iframe>
+      </div>
     </section>
 
-    <section id="join">
-      <h2>Join Us</h2>
+    <section id="join" class="mb-5">
+      <h2 class="text-success">Join Us</h2>
       <p>Membership is open to any currently enrolled MSU student who supports our mission. Joining SHA also subscribes you to our newsletter.</p>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <button type="submit">Join & Subscribe</button>
+      <form action="https://formspree.io/f/your-form-id" method="POST" class="row g-3">
+        <div class="col-md-6">
+          <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+        </div>
+        <div class="col-md-6">
+          <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-success">Join & Subscribe</button>
+        </div>
       </form>
     </section>
 
-    <section id="announcements">
-      <h2>Announcements</h2>
-      <div class="grid">
-        <div><strong>Aug 2025:</strong><br> SHA founded and open for membership!</div>
-        <div><strong>Sept 2025:</strong><br> First general meeting — details in calendar.</div>
+    <section id="announcements" class="mb-5">
+      <h2 class="text-success">Announcements</h2>
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="card p-3">
+            <strong>Aug 2025:</strong><br> SHA founded and open for membership!
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card p-3">
+            <strong>Sept 2025:</strong><br> First general meeting — details in calendar.
+          </div>
+        </div>
       </div>
     </section>
 
-    <section id="newsletters">
-      <h2>Latest Newsletters</h2>
+    <section id="newsletters" class="mb-5">
+      <h2 class="text-success">Latest Newsletters</h2>
       <p><a href="newsletters/aug2025.pdf" target="_blank">August 2025 Newsletter (PDF)</a></p>
     </section>
+
   </main>
 
+  <!-- FOOTER -->
   <footer>
     <p>© 2025 Spartan Housing Alliance | Michigan State University</p>
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
