--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -64,6 +65,56 @@
           <li class="nav-item"><a class="nav-link" href="#announcements">Announcements</a></li>
           <li class="nav-item"><a class="nav-link" href="#newsletters">Newsletters</a></li>
         </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Spartan Housing Alliance</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- AOS Animations -->
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+    <!-- Custom Styles -->
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="70">
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">SHA</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#mission">Mission</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#exec">Exec Board</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#calendar">Calendar</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#join">Join</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#announcements">Announcements</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#newsletters">Newsletters</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
@@ -76,6 +127,7 @@
       <a href="#join" class="btn btn-light btn-lg">Join Us Today</a>
     </div>
   </section>
+    </nav>
 
   <!-- CONTENT -->
   <main class="container my-5">
@@ -85,6 +137,21 @@
       <p>
         We, the students of Michigan State University, recognizing the critical importance of affordable, safe, and accessible housing for the well-being and success of the student body, do hereby establish this Constitution for the Spartan Housing Alliance in pursuit of advocacy, education, and community empowerment in housing justice.
       </p>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="container">
+        <h1 data-aos="fade-up">Spartan Housing Alliance</h1>
+        <p data-aos="fade-up" data-aos-delay="150">
+          Advocating for affordable, safe, and accessible housing at MSU.
+        </p>
+        <a
+          href="#join"
+          class="btn btn-light btn-lg"
+          data-aos="fade-up"
+          data-aos-delay="300"
+          >Join Us Today</a
+        >
+      </div>
     </section>
 
     <section id="mission" class="mb-5">
@@ -96,6 +163,18 @@
         <li>Collaborate with administration, government, and community partners.</li>
       </ul>
     </section>
+    <!-- CONTENT -->
+    <main class="container my-5">
+      <section id="about" class="mb-5" data-aos="fade-up">
+        <h2 class="text-success">Preamble</h2>
+        <p>
+          We, the students of Michigan State University, recognizing the
+          critical importance of affordable, safe, and accessible housing for
+          the well-being and success of the student body, do hereby establish
+          this Constitution for the Spartan Housing Alliance in pursuit of
+          advocacy, education, and community empowerment in housing justice.
+        </p>
+      </section>
 
     <section id="exec" class="mb-5">
       <h2 class="text-success">Executive Board</h2>
@@ -104,28 +183,72 @@
           <div class="card p-3 text-center">
             <h5>Lila Abdullah</h5>
             <p>President & Founder</p>
+      <section id="mission" class="mb-5" data-aos="fade-up">
+        <h2 class="text-success">Mission & Purpose</h2>
+        <ul>
+          <li>
+            Advocate for policies and initiatives that promote affordable, safe,
+            and accessible housing options for all MSU students.
+          </li>
+          <li>
+            Educate students and the broader community on critical housing
+            issues.
+          </li>
+          <li>
+            Empower students to engage in housing-related advocacy efforts.
+          </li>
+          <li>
+            Collaborate with administration, government, and community partners.
+          </li>
+        </ul>
+      </section>
+
+      <section id="exec" class="mb-5" data-aos="fade-up">
+        <h2 class="text-success">Executive Board</h2>
+        <div class="row g-4">
+          <div class="col-md-3">
+            <div class="card p-3 text-center">
+              <h5>Lila Abdullah</h5>
+              <p>President & Founder</p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card p-3 text-center">
             <h5>[Name]</h5>
             <p>Vice President</p>
+          <div class="col-md-3">
+            <div class="card p-3 text-center">
+              <h5>[Name]</h5>
+              <p>Vice President</p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card p-3 text-center">
             <h5>[Name]</h5>
             <p>Treasurer</p>
+          <div class="col-md-3">
+            <div class="card p-3 text-center">
+              <h5>[Name]</h5>
+              <p>Treasurer</p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card p-3 text-center">
             <h5>[Name]</h5>
             <p>Secretary</p>
+          <div class="col-md-3">
+            <div class="card p-3 text-center">
+              <h5>[Name]</h5>
+              <p>Secretary</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
+      </section>
 
     <section id="calendar" class="mb-5">
       <h2 class="text-success">Meetings & Events</h2>
@@ -143,12 +266,19 @@
         </div>
         <div class="col-md-6">
           <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+      <section id="calendar" class="mb-5" data-aos="fade-up">
+        <h2 class="text-success">Meetings & Events</h2>
+        <div class="ratio ratio-16x9">
+          <iframe
+            src="https://calendar.google.com/calendar/embed?src=yourcalendarid&ctz=America/New_York"
+          ></iframe>
         </div>
         <div class="col-12">
           <button type="submit" class="btn btn-success">Join & Subscribe</button>
         </div>
       </form>
     </section>
+      </section>
 
     <section id="announcements" class="mb-5">
       <h2 class="text-success">Announcements</h2>
@@ -156,29 +286,129 @@
         <div class="col-md-6">
           <div class="card p-3">
             <strong>Aug 2025:</strong><br> SHA founded and open for membership!
+      <section id="join" class="mb-5" data-aos="fade-up">
+        <h2 class="text-success">Join Us</h2>
+        <p>
+          Membership is open to any currently enrolled MSU student who supports
+          our mission. Joining SHA also subscribes you to our newsletter.
+        </p>
+        <form
+          action="https://formspree.io/f/your-form-id"
+          method="POST"
+          class="row g-3"
+        >
+          <div class="col-md-6">
+            <input
+              type="text"
+              name="name"
+              class="form-control"
+              placeholder="Your Name"
+              required
+            />
           </div>
         </div>
         <div class="col-md-6">
           <div class="card p-3">
             <strong>Sept 2025:</strong><br> First general meeting — details in calendar.
+          <div class="col-md-6">
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              placeholder="Your Email"
+              required
+            />
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-success">
+              Join & Subscribe
+            </button>
+          </div>
+        </form>
+      </section>
+
+      <section id="announcements" class="mb-5" data-aos="fade-up">
+        <h2 class="text-success">Announcements</h2>
+        <div class="row g-4">
+          <div class="col-md-6">
+            <div class="card p-3">
+              <strong>Aug 2025:</strong><br />
+              SHA founded and open for membership!
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card p-3">
+              <strong>Sept 2025:</strong><br />
+              First general meeting — details in calendar.
+            </div>
           </div>
         </div>
       </div>
     </section>
+      </section>
 
     <section id="newsletters" class="mb-5">
       <h2 class="text-success">Latest Newsletters</h2>
       <p><a href="newsletters/aug2025.pdf" target="_blank">August 2025 Newsletter (PDF)</a></p>
     </section>
+      <section id="newsletters" class="mb-5" data-aos="fade-up">
+        <h2 class="text-success">Latest Newsletters</h2>
+        <p>
+          <a href="newsletters/aug2025.pdf" target="_blank"
+            >August 2025 Newsletter (PDF)</a
+          >
+        </p>
+      </section>
+    </main>
 
   </main>
+    <!-- Scroll to Top Button -->
+    <button id="backToTop" class="btn btn-success btn-lg rounded-circle">
+      &uarr;
+    </button>
 
   <!-- FOOTER -->
   <footer>
     <p>© 2025 Spartan Housing Alliance | Michigan State University</p>
   </footer>
+    <!-- FOOTER -->
+    <footer>
+      <p>© 2025 Spartan Housing Alliance | Michigan State University</p>
+    </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
+script.js
+New
++22
+-0
+
+document.addEventListener("DOMContentLoaded", function () {
+  const navbar = document.querySelector(".navbar");
+  const backToTop = document.getElementById("backToTop");
+
+  window.addEventListener("scroll", function () {
+    if (window.scrollY > 50) {
+      navbar.classList.add("navbar-scrolled");
+      backToTop.classList.add("show");
+    } else {
+      navbar.classList.remove("navbar-scrolled");
+      backToTop.classList.remove("show");
+    }
+  });
+
+  backToTop.addEventListener("click", () => {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  });
+
+  AOS.init({
+    once: true,
+  });
+});
